kubernetes/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: hello
spec:
  selector:
    matchLabels:
      app: hello_backend
  replicas: 1
  template:
    metadata:
      labels:
        app: hello_backend
    spec:
      containers:
        - name: hello-backend
          image: dmanojbaba/hello-backend:latest
          ports:
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello_backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9002
