kubernetes/bff.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
  namespace: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello_bff
  template:
    metadata:
      labels:
        app: hello_bff
    spec:
      containers:
        - name: hello-bff
          image: dmanojbaba/hello-bff:latest
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello_bff
  ports:
    - port: 80
      targetPort: 9001
      protocol: TCP
      name: http
