kubernetes/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello_frontend
  template:
    metadata:
      labels:
        app: hello_frontend
    spec:
      containers:
        - name: hello-frontend
          image: dmanojbaba/hello-frontend:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello_frontend
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: http
