kubernetes/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello_grafana
  template:
    metadata:
      labels:
        app: hello_grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.2.4
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/grafana/provisioning/datasources/
      volumes:
        - name: config-volume
          configMap:
            name: grafana-configmap
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello_grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
