kubernetes/prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello_prometheus
  template:
    metadata:
      labels:
        app: hello_prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.45.3
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
      serviceAccountName: prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-configmap
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: hello
spec:
  type: ClusterIP
  selector:
    app: hello_prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
