kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
    - host: foo.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: bff.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 80
    - host: prom.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 80
    - host: graf.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
